--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,27 @@ nav,
   max-width: 1000px;
   padding: 0 30px;
 }
+/* .header__img--container{
+  width: 60px;
+  height: 60px;
+  -webkit-border-radius: 60px;
+  -webkit-background-clip: padding-box;
+  -moz-border-radius: 60px;
+  -moz-background-clip: padding;
+  border-radius: 60px;
+  background-clip: padding-box;
+  margin: 7px 0 0 5px;
+  float: left;
+  background-size: cover;
+  background-position: center center;
+} */
+.header__img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.40);
+}
 .header__para {
   font-size: 24px;
   line-height: 2;
